--- a/src/main/resources/static/frontend/src/pages/AlquilarMaquina.css
+++ b/src/main/resources/static/frontend/src/pages/AlquilarMaquina.css
@@ -186,3 +186,14 @@ input[type="date"] {
 .error-banner strong {
     margin-right: 0.5rem;
 }
+
+.search-input {
+    padding: 10px;
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto;
+    display: block;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+}
