--- a/src/main/resources/static/frontend/src/pages/AlquilarMaquina.css
+++ b/src/main/resources/static/frontend/src/pages/AlquilarMaquina.css
@@ -24,11 +24,27 @@
     border-radius: 12px;
     box-shadow: 0 4px 20px rgba(0,0,0,0.08);
     display: flex;
+    flex: 1;
     flex-direction: column;
     gap: 12px;
     max-width: 360px;
+    overflow: visible;
 }
 
+.react-datepicker {
+    overflow: visible !important;  /* Permite que el contenido sobresalga */
+    width: auto !important;        /* Para que se ajuste al contenido */
+}
+.react-datepicker__month-container {
+    width: 100% !important;        /* O un ancho suficiente para el calendario */
+    overflow: visible !important;  /* Evita recortes internos */
+    white-space: nowrap; /* Evita que se rompa en líneas */
+}
+
+.big-calendar {
+    font-size: 14px;
+    width: auto !important;
+}
 
 .cards-container {
     display: flex;
@@ -111,14 +127,11 @@
 
 .machine-photo {
     width: 100%;
-    height: 220px;
-    border-radius: 12px;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 10px;
     object-fit: cover;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-}
-
-.big-calendar {
-    font-size: 14px;
 }
 
 .card-title {
