--- a/src/main/resources/static/frontend/src/pages/MisAlquileres.css
+++ b/src/main/resources/static/frontend/src/pages/MisAlquileres.css
@@ -6,6 +6,20 @@
     min-height: 100vh;
 }
 
+.button-primary {
+    background-color: #e63946;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    margin: 10px;
+    font-size: 14px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+}
+
 .title {
     text-align: center;
     font-size: 2.5rem;
