--- a/src/main/resources/static/frontend/src/pages/PerfilUsuario.module.css
+++ b/src/main/resources/static/frontend/src/pages/PerfilUsuario.module.css
@@ -21,7 +21,6 @@
     box-sizing: border-box;
     margin: 2rem auto;
 }
-
 .title {
     text-align: center;
     color: rgba(0, 0, 0, 0.75);
@@ -30,7 +29,6 @@
     font-weight: 600;
     letter-spacing: -0.5px;
 }
-
 .profileData {
     text-align: center;
     color: rgba(0, 0, 0, 0.75);
@@ -50,6 +48,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.09rem;
+    position: relative;
 }
 .label {
     font-size: 0.93rem;
@@ -134,11 +133,13 @@
     background: #ffeaea;
     border-radius: 5px;
     padding: 0.7rem;
-    text-align: center;
+    text-align: left;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 0.97rem;
     width: 100%;
-    margin-bottom: 0.5rem;
+    box-sizing: border-box;
+    margin-bottom: 0.3rem;
+    margin-top: 0.3rem;
 }
 .successMsg {
     color: #10ac84;
